Improved branding, and new categories

--- a/game.html
+++ b/game.html
@@ -8,20 +8,21 @@
 	<title>Quiz</title>
 </head>
 <body>
+	<header></header>
 	<div class="progress__bar">
 		<div class="progress__bar-fill"></div>
 	</div>
 	<div class="score"></div>
-<div class="container">
-	<ul class="question"><h2>How would you answer this question?</h2>
-		<li class="answer-choice" data-number="1"><span>A</span><p>Choice</p></li>
-		<li class="answer-choice" data-number="2"><span>B</span><p>Choice</p></li>
-		<li class="answer-choice" data-number="3"><span>C</span><p>Choice</p></li>
-		<li class="answer-choice" data-number="4"><span>D</span><p>Choice</p></li>
-	</ul>
-</div>
-<div class="start answer-choice"><span>Play again</span></div>
-
+	<div class="container">
+		<ul class="question"><h2>How would you answer this question?</h2>
+			<li class="answer-choice" data-number="1"><span>A</span><p>Choice</p></li>
+			<li class="answer-choice" data-number="2"><span>B</span><p>Choice</p></li>
+			<li class="answer-choice" data-number="3"><span>C</span><p>Choice</p></li>
+			<li class="answer-choice" data-number="4"><span>D</span><p>Choice</p></li>
+		</ul>
+	</div>
+	<div class="start answer-choice"><a href="index.html"><span>Play again</span></a></div>
+	<footer>&copy; Poor Giraffe, 2022</footer>
 <script type="text/javascript" src="main.js"></script>
 </body>
 </html>
