--- a/index.html
+++ b/index.html
@@ -8,12 +8,15 @@
 	<title>Quizz</title>
 </head>
 <body>
-<div class="container">
-	<ul class="question"><h2>Quick quiz!</h2>
-		<li class="answer-choice"><a href='game.html'>Start game</a></li>
-		<li class="answer-choice"><a href='score.html'>High scores</a></li>
-	</ul>
-</div>
-
+	<header></header>
+	<div class="container">
+		<ul class="question"><h2>Quick quiz!</h2>
+			<li class="answer-choice"><a href='game.html?cat=9'><p>General Knowledge</p></a></li>
+			<li class="answer-choice"><a href='game.html?cat=17'><p>Science</p></a></li>
+			<li class="answer-choice"><a href='game.html?cat=23'><p>History</p></a></li>
+			<li class="answer-choice"><a href='score.html'><p>High scores</p></a></li>
+		</ul>
+	</div>
+	<footer>&copy; Poor Giraffe, 2022</footer>
 </body>
 </html>
